style.css
/* CSS Reset */

/*  Box sizing rules */
/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default padding */
ul[class],
ol[class] {
  padding: 0;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
ul[class],
ol[class],
figure,
blockquote,
dl,
dd {
  margin: 0;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  scroll-behavior: smooth;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
}

/* Remove list styles on ul, ol elements with a class attribute */
ul[class],
ol[class] {
  list-style: none;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img {
  max-width: 100%;
  display: block;
}

/* Natural flow and rhythm in articles by default */
article>*+* {
  margin-top: 1em;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* Remove all animations and transitions for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  * {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/* End Reset^^^^ */
body {
  font-family: 'Roboto', sans-serif;
}

h2 {
  font-weight: 400;
  font-size: 34px;
}

p {
  font-size: 20px;
}

ul {
  font-size: 20px;
}

.emphasis {
  font-style: italic;
}

.emphasis.author {
  font-size: 20px;
}

.align-right {
  text-align: right;
}

.header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  background-color: transparent;
  position: absolute;
  width: 100%;
  top: 20px;
  padding-left: 10px;
  padding-right: 10px;
}


.navList {
  display: none
}

.topNav li a:link,
.topNav li a:visited,
.topNav li a:hover,
.topNav li a:active {
  color: #fff;
  text-decoration: none;
}

.btn {
  color: #fff;
}

.btn_std {
  background: #FE9000;
  text-transform: uppercase;
  font-weight: 700;
  border: 1px transparent solid;
  border-radius: 2px;
  max-width: 315px;
  padding: 8px 64px;
  transition: all 0.3s;
}
.btn_std:focus,
.btn_std:hover {
  border: 1px #FE9000 solid;
}


.logo img {
  /* background-color: red; */
  width: 135px;
  height: 30.92px;
}

@media only screen and (min-width: 1024px) {
  .logo img {
    width: 201px;
    height: 46.03px;
  }
}

.openKastButton {
  color: #fff;
  border: 1px solid #fff;
  background-color: transparent;
}

.openKastButton:hover,
.openKastButton:focus{
  box-shadow: inset 0px 0px 0px 1px transparent;
}


@media only screen and (min-width: 1024px) {
  /* .openKastButton {
    color: #fff;
    border: 1px solid #fff;
    
  } */

}

.navBtnGroup {
  display: flex;
  flex-direction: column;
  /* justify-content: space-around; */
}

.navButtonLine {
  display: inline-block;
  height: 3px;
  width: 25px;
  background-color: #fff;
  /* margin-top: 5px; */
}

.navButtonLine:not(:first-child) {
  margin-top: 5px;
}

section {
  padding-left: 35px;
  padding-right: 35px;
  padding-top: 50px;
}

.section_top {
  background-color: #531F62;
  background-image: url(img/gradient-violet-bg.jpg);
  /* padding-top: 40px; */
  background-size: cover;
  color: #fff;
  text-align: center;
  display: flex;
  flex-direction: column;
}

.section_top img {
  min-width: 260px;
  width: 80%;
  width: 600px;
  margin: 0 auto;
  padding-bottom: 20px;
  padding-top: 50px;
}

@media only screen and (min-width: 1024px) {
  .section_top img {
    padding-top: 80px;
  }
}

.section_top h1 {
  font-size: 34px;
  line-height: 40px;
}

.subTitle {
  font-size: 18px;
  line-height: 25px;
  padding-top: 20px;
  display: inline-block;
}

.section_top .btn_std {
  margin-top: 30px;
  margin-bottom: 50px;
  margin-left: auto;
  margin-right: auto;
}

.section_featuredIn {
  background-color: #f4fafa;
}

.section_featuredIn {
  text-align: center;
}

.section_featuredIn h2 {
  color: rgba(0, 0, 0, .8);
}

.section_featuredIn .featuresContainer {
  display: grid;
  grid-template-columns: 1fr 1fr;
  margin-top: 50px;
  margin-bottom: 50px;
  column-gap: 40px;
  row-gap: 40px;
  text-align: center;
}

@media only screen and (min-width: 1024px) {
  .section_featuredIn .featuresContainer {
    grid-template-columns: 1fr 1fr 1fr;
    row-gap: 70px;
  }
}

.feature {
  justify-self: center;
}

.featuresQuote {
  padding-bottom: 60px;
  margin-left: 30px;
  margin-right: 30px;
}

.featuresQuote p {
  font-size: 24px;
  color: rgba(0, 0, 0, .8);
}

.section_whatIsKast {
  text-align: center;
  background-image: url(img/green-bg.jpg);
  background-size: cover;
  color: #fff;
  padding-bottom: 110px;
  padding-top: 110px;
}

.section_whatIsKast h2,
.section_tryKastTV h2 {
  font-size: 34px;
  margin-bottom: 30px;
}

.section_whatIsKast p:not(:last-child),
.section_tryKastTV p:not(:last-child) {
  margin-bottom: 50px;
}

.section_whatIsKast p:last-child {
  margin-bottom: 70px;
}

.section_tryKastTV {
  display: flex;
  flex-direction: column;
  text-align: center;
  color: #333;
  padding-bottom: 110px;
  padding-top: 110px;
}

.section_tryKastTV .videoWrapper {
  position: relative;
  width: 100%;
  min-height: 500px;
}

.section_tryKastTV .videoWrapper .video {
  width: 100%;
  height: 100%;
}

.section_tryKastTV .btn {
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 30px;
}

.section_tryKastTV h3 {
  margin-bottom: 30px;
}

.section_tryKastTV a:link,
.section_tryKastTV a:visited {
  color: orange;
  text-decoration: none;
}

.section_tryKastTV a:hover,
.section_tryKastTV a:active {
  text-decoration: underline;
}

@media only screen and (min-width: 1024px) {
  .header {
    height: 83px;
    display: grid;
    grid-template-columns: 205px auto 120px;
    column-gap: 40px;
  }

  .topNav {
    display: flex;
    align-self: center;
    justify-self: end;
  }

  .openKastButton {
    order: 3;
    width: 100%;
    align-self: center;
    padding-top: 8px;
    padding-bottom: 8px;
  }

  .navList {
    display: flex;
    justify-content: space-evenly;
    color: #fff;

    /* align-self: center; */
    /* background-color: red; */
  }

  .navList li:not(last-child) {
    margin-right: 40px;
  }

  .navBtnGroup,
  .navBtnGroup .navButtonLine {
    display: none;
  }

  .logo {
    order: 1;
    /* background-color: peru; */
    align-self: center;
  }


  .nav {
    order: 2;
  }
}

@media only screen and (min-width: 1024px) {
  .section_tryKastTV h3 {
    margin-top: 30px;
  }
}

